test/subjects/errors/push_operator_on_strings.php
<?php

	// This doesn't use the testing mechanism, but should as soon as
	// type-inference is in place.

	$x = "string";
	$x[] = "asd";

?>
